--- a/style.css
+++ b/style.css
@@ -21,10 +21,10 @@ form {
 
 .input {
   width: 100%;
-  font-size: 20px;
   border-radius: 10px;
   padding: 0.5rem;
   border: 2px solid black;
+  font-size: 15px;
 }
 
 .search {
@@ -43,10 +43,42 @@ form {
 .project {
   width: 70%;
 }
+.vozaci {
+  display: flex;
+  flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  gap: 10px;
+  margin-top: 1rem;
 
+  top: 51px;
+  background-color: darkgray;
+  border-radius: 20px;
+  transition: 1s;
+}
+.vozac {
+  display: flex;
+  width: 168px;
+  top: 115px;
+  z-index: 1;
+  list-style: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  display: none;
+  margin-top: 15px;
+  margin-left: -38px;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 15px;
+}
+li:hover {
+  color: gray;
+  cursor: pointer;
+  transition: cubic-bezier(0.5);
+}
 .car {
   transform-style: preserve-3d;
-  transition: all 1s ease;
+  transition: all 2s ease;
   position: relative;
   text-align: center;
   font-size: 25px;
@@ -54,9 +86,17 @@ form {
   border-radius: 10px;
   border: 2px solid black;
   cursor: pointer;
+  transition: all 1s ease-out;
 }
 .car:hover {
   transform: rotateX(180deg);
+}
+.no {
+  display: flex;
+  justify-content: center;
+  margin-top: 16rem;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgba(128, 128, 128, 0.66);
 }
 
 .car img {
@@ -92,6 +132,7 @@ form {
   gap: 1rem;
   width: 100%;
   margin-top: 4rem;
+  transition: 1s;
 }
 
 .race {
@@ -102,6 +143,7 @@ form {
   border-radius: 10px;
   visibility: hidden;
   flex-direction: column-reverse;
+  transition: 1s;
 }
 .race p:first-child {
   border-bottom: none;
@@ -118,10 +160,19 @@ form {
   width: 100%;
   height: 110px;
 }
+
 .raceCar img {
   position: absolute;
   left: 0%;
   max-width: 50%;
+}
+.buttonn {
+  float: right;
+  background-color: transparent;
+  border: none;
+  position: relative;
+  cursor: pointer;
+  z-index: 10;
 }
 
 .sttart {
